# cpp_pr

./: .gitignore  CMakeLists.txt
.cache/clangd/index/: main.cpp.4452C94BA20D9643.idx
.github/workflows/: test.yml
app/: CMakeLists.txt
app/src/: main.cpp
math/: CMakeLists.txt
math/include/math/: fact.hpp  fib.hpp  pi_constant.hpp
math/src/: fact.cpp  fib.cpp
src/: main.cpp
tests/: CMakeLists.txt
tests/src/: test_fact.cpp  test_fib.cpp  test_pi.cpp
